[Config] [Matta] initializing and running the server.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "semi": ["error"],
     "no-tabs": ["off", "always"],
     "new-cap": "off",
+    "require-jsdoc": "off",
     "no-use-before-define": ["error", { "functions": false, "variables": false }],
     "no-console": [
       "error",
