--- a/package.json
+++ b/package.json
@@ -33,5 +33,19 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "2.0.5"
+  },
+  "dependencies": {
+    "env-schema": "^1.1.0",
+    "fastify": "^3.1.1",
+    "fastify-cors": "^4.0.0",
+    "fastify-formbody": "^4.0.3",
+    "fastify-healthcheck": "^2.3.1",
+    "fastify-helmet": "^4.0.2",
+    "fastify-plugin": "^2.0.1",
+    "make-promises-safe": "^5.1.0",
+    "pino": "^6.4.0",
+    "pino-pretty": "^4.0.3",
+    "under-pressure": "^5.1.0",
+    "uuid": "^8.2.0"
   }
 }
