setup github actions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,4 @@
 {
-  "cSpell.words": [
-    "Harish",
-    "Matta",
-    "Parens",
-    "fastify",
-    "formbody",
-    "healthcheck",
-    "pino",
-    "serializers",
-    "traceid"
-  ]
+  "cSpell.words": ["Harish", "Matta", "Parens", "fastify", "formbody", "healthcheck", "pino", "serializers", "traceid"],
+  "editor.formatOnSave": true
 }
