--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=12.10.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Running tests... \nDone.\" && exit 0",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
