improve CI actions

--- a/workflows/integrate.yml
+++ b/workflows/integrate.yml
@@ -1,17 +1,25 @@
-name: Node Continuous Integration
+name: Node.js Continuous Integration
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
-    branches: [master]
+    branches:
+      - master
 
 jobs:
   test_pull_request:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
     steps:
       - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm test
       - run: npm run lint
