[Feat] Added Todo post route
Added swagger module to generate the swagger docs dynamically based on schema.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,11 @@
     "multistream",
     "pino",
     "serializers",
+    "todos",
     "traceid"
   ],
-  "editor.formatOnSave": true
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "eslint.validate": ["javascript"]
 }
