feat: added knex, firebaseAdmin and serializers.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,11 +7,14 @@
     "node": true,
     "jest": true
   },
-  "plugins": ["prettier"],
-  "extends": ["google", "eslint:recommended", "plugin:prettier/recommended", "plugin:node/recommended"],
-  "parserOptions": {
-    "ecmaVersion": 2020
-  },
+  "plugins": ["prettier", "unicorn"],
+  "extends": [
+    "google",
+    "eslint:recommended",
+    "plugin:prettier/recommended",
+    "plugin:node/recommended"
+  ],
+  "parserOptions": { "ecmaVersion": 2020 },
   "rules": {
     "strict": ["error", "global"],
     "no-var": "error",
@@ -20,13 +23,9 @@
     "no-tabs": ["off", "always"],
     "new-cap": "off",
     "require-jsdoc": "off",
+    "no-param-reassign": ["error", { "props": true }],
     "no-use-before-define": ["error", { "functions": false, "variables": false }],
-    "no-console": [
-      "error",
-      {
-        "allow": ["time", "timeEnd"]
-      }
-    ],
+    "no-console": ["error", { "allow": ["time", "timeEnd"] }],
     "comma-dangle": ["error", "never"],
     "max-len": [
       "error",
@@ -40,13 +39,10 @@
         "ignorePattern": "^\\s*var\\s.+=\\s*require\\s*\\("
       }
     ],
-    "brace-style": [
-      "error",
-      "1tbs",
-      {
-        "allowSingleLine": true
-      }
-    ],
-    "complexity": ["error", 10]
+    "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
+    "complexity": ["warn", 6],
+    "import/no-extraneous-dependencies": 0,
+    "require-atomic-updates": 0,
+    "unicorn/filename-case": ["error", { "case": "camelCase" }]
   }
 }
