--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,20 @@
     "Harish",
     "Matta",
     "Parens",
+    "Xncn",
+    "Zmdz",
+    "Zyjsro",
+    "appspot",
     "autoload",
+    "errorable",
     "fastify",
+    "firebaseapp",
     "formbody",
     "healthcheck",
     "multistream",
     "pino",
     "redactable",
+    "rtracer",
     "serializers",
     "todos",
     "traceid"
