--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
   "dependencies": {
     "ajv": "^6.12.6",
     "ajv-errors": "^1.0.1",
-    "cls-rtracer": "^2.5.1",
     "env-schema": "^1.1.0",
     "fastify": "^3.1.1",
     "fastify-autoload": "^3.3.1",
@@ -53,8 +52,8 @@
     "fastify-formbody": "^4.0.3",
     "fastify-healthcheck": "^2.3.1",
     "fastify-helmet": "^4.0.2",
-    "fastify-oas": "^3.0.0-rc.3",
     "fastify-plugin": "^2.0.1",
+    "fastify-swagger": "^4.4.1",
     "firebase-admin": "^9.4.1",
     "json-stringify-safe": "^5.0.1",
     "knex": "^0.21.12",
