update package versions to latest update sample.env file fix lint errors, code to use latest packages

--- a/package.json
+++ b/package.json
@@ -32,39 +32,40 @@
   },
   "homepage": "https://github.com/mattaharish/fastify-boilerplate#readme",
   "devDependencies": {
-    "eslint": "^7.4.0",
+    "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-unicorn": "^23.0.0",
-    "husky": "^4.3.4",
-    "pino-pretty": "^4.3.0",
-    "prettier": "2.0.5"
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-unicorn": "^36.0.0",
+    "husky": "^7.0.2",
+    "pino-pretty": "^7.0.1",
+    "prettier": "2.4.1"
   },
   "dependencies": {
-    "ajv": "^6.12.6",
-    "ajv-errors": "^1.0.1",
-    "env-schema": "^1.1.0",
-    "fastify": "^3.1.1",
-    "fastify-autoload": "^3.3.1",
-    "fastify-cors": "^4.0.0",
-    "fastify-formbody": "^4.0.3",
-    "fastify-healthcheck": "^2.3.1",
-    "fastify-helmet": "^4.0.2",
-    "fastify-plugin": "^2.0.1",
-    "fastify-swagger": "^4.4.1",
-    "firebase-admin": "^9.4.1",
+    "ajv": "^8.6.3",
+    "ajv-errors": "^3.0.0",
+    "ajv-formats": "^2.1.1",
+    "env-schema": "^3.4.0",
+    "fastify": "^3.21.3",
+    "fastify-autoload": "^3.9.0",
+    "fastify-cors": "^6.0.2",
+    "fastify-formbody": "^5.1.0",
+    "fastify-healthcheck": "^3.1.0",
+    "fastify-helmet": "^5.3.2",
+    "fastify-plugin": "^3.0.0",
+    "fastify-swagger": "^4.12.0",
+    "firebase-admin": "^9.11.1",
     "json-stringify-safe": "^5.0.1",
-    "knex": "^0.21.12",
-    "lodash": "^4.17.20",
+    "knex": "^0.95.11",
+    "lodash": "^4.17.21",
     "make-promises-safe": "^5.1.0",
-    "nodemon": "^2.0.6",
-    "pg": "^8.5.1",
-    "pino": "^6.4.0",
-    "pino-multi-stream": "^5.1.1",
-    "under-pressure": "^5.1.0",
-    "uuid": "^8.2.0"
+    "nodemon": "^2.0.12",
+    "pg": "^8.7.1",
+    "pino": "^6.13.2",
+    "pino-multi-stream": "^5.3.0",
+    "under-pressure": "^5.7.0",
+    "uuid": "^8.3.2"
   },
   "husky": {
     "hooks": {
