--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "echo \"Running tests... \n Done.\" && exit 0",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "migrate": "knex migrate:latest --debug",
+    "knex": "node -r dotenv/config ./node_modules/.bin/knex",
+    "migrate": "npm run knex -- migrate:latest --debug --knexfile ./config/knexConfig.js",
     "migrate:make": "knex -- migrate:make"
   },
   "repository": {
@@ -33,38 +34,38 @@
   },
   "homepage": "https://github.com/mattaharish/fastify-boilerplate#readme",
   "devDependencies": {
-    "eslint": "^8.16.0",
+    "eslint": "^8.23.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-unicorn": "^42.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-unicorn": "^43.0.2",
     "husky": "^8.0.1",
-    "pino-pretty": "^7.6.1",
-    "prettier": "2.6.2"
+    "pino-pretty": "^9.1.0",
+    "prettier": "2.7.1"
   },
   "dependencies": {
-    "@fastify/autoload": "^4.0.0",
-    "@fastify/cors": "^7.0.0",
-    "@fastify/formbody": "^6.0.0",
+    "@fastify/autoload": "^5.3.1",
+    "@fastify/cors": "^8.1.0",
+    "@fastify/formbody": "^7.1.0",
+    "@fastify/helmet": "^10.0.0",
+    "@fastify/swagger": "^7.5.0",
+    "@fastify/under-pressure": "^8.1.0",
     "ajv": "^8.11.0",
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^2.1.1",
-    "env-schema": "^3.4.0",
-    "fastify": "^3.21.3",
-    "fastify-healthcheck": "^3.1.0",
-    "fastify-helmet": "^5.3.2",
-    "fastify-plugin": "^3.0.0",
-    "fastify-swagger": "^4.17.1",
+    "env-schema": "^5.0.0",
+    "fastify": "^4.5.3",
+    "fastify-healthcheck": "^4.2.0",
+    "fastify-plugin": "^4.2.1",
     "json-stringify-safe": "^5.0.1",
-    "knex": "^2.1.0",
+    "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "make-promises-safe": "^5.1.0",
-    "nodemon": "^2.0.16",
-    "pg": "^8.7.3",
-    "pino": "^7.11.0",
+    "nodemon": "^2.0.19",
+    "pg": "^8.8.0",
+    "pino": "^8.4.2",
     "pino-multi-stream": "^6.0.0",
-    "under-pressure": "^5.8.1",
     "uuid": "^8.3.2"
   },
   "husky": {
