[Matta] update packages and fix lint config

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "nodemon src",
     "test": "echo \"Running tests... \n Done.\" && exit 0",
-    "lint": "eslint .",
+    "lint": "eslint . -c .eslintrc.json --ext js --fix",
     "lint:fix": "eslint --fix .",
     "knex": "node -r dotenv/config ./node_modules/.bin/knex",
     "migrate": "npm run knex -- migrate:latest --debug --knexfile ./config/knexConfig.js",
@@ -34,39 +34,39 @@
   },
   "homepage": "https://github.com/mattaharish/fastify-boilerplate#readme",
   "devDependencies": {
-    "eslint": "^8.23.0",
+    "nodemon": "^2.0.19",
+    "eslint": "^8.35.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unicorn": "^43.0.2",
-    "husky": "^8.0.1",
-    "pino-pretty": "^9.1.0",
-    "prettier": "2.7.1"
+    "eslint-plugin-unicorn": "^46.0.0",
+    "husky": "^8.0.3",
+    "pino-pretty": "^9.4.0",
+    "prettier": "2.8.4"
   },
   "dependencies": {
-    "@fastify/autoload": "^5.3.1",
-    "@fastify/cors": "^8.1.0",
-    "@fastify/formbody": "^7.1.0",
-    "@fastify/helmet": "^10.0.0",
-    "@fastify/swagger": "^7.5.0",
-    "@fastify/under-pressure": "^8.1.0",
-    "ajv": "^8.11.0",
+    "@fastify/autoload": "^5.7.1",
+    "@fastify/cors": "^8.2.0",
+    "@fastify/formbody": "^7.4.0",
+    "@fastify/helmet": "^10.1.0",
+    "@fastify/swagger": "^8.3.1",
+    "@fastify/under-pressure": "^8.2.0",
+    "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^2.1.1",
-    "env-schema": "^5.0.0",
-    "fastify": "^4.5.3",
-    "fastify-healthcheck": "^4.2.0",
-    "fastify-plugin": "^4.2.1",
+    "env-schema": "^5.2.0",
+    "fastify": "^4.14.1",
+    "fastify-healthcheck": "^4.4.0",
+    "fastify-plugin": "^4.5.0",
     "json-stringify-safe": "^5.0.1",
-    "knex": "^2.3.0",
+    "knex": "^2.4.2",
     "lodash": "^4.17.21",
     "make-promises-safe": "^5.1.0",
-    "nodemon": "^2.0.19",
-    "pg": "^8.8.0",
-    "pino": "^8.4.2",
+    "pg": "^8.9.0",
+    "pino": "^8.11.0",
     "pino-multi-stream": "^6.0.0",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   },
   "husky": {
     "hooks": {
